# bitmex-growth-engineering-simulation

./: .gitignore  README.md  TESTING.MD  create_database.sql
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  seed_demo_data.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  exceptions.py  logging_config.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py  event_taxonomy.py  funnels.py  quality_rules.py
backend/app/models/: __init__.py  analytics_snapshot.py  attribution.py  campaign.py  event.py  event_validation_log.py  funnel.py  health_score.py  insight.py  mixins.py  user.py
backend/app/repositories/: __init__.py  analytics_repository.py  analytics_snapshot_repository.py  attribution_repository.py  base.py  event_repository.py  event_validation_log_repository.py  funnel_repository.py  health_score_repository.py  insight_repository.py  quality_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  attribution.py  event_health.py  events.py  health.py  insights.py  quality.py
backend/app/services/: __init__.py  analytics_service.py  attribution_service.py  data_quality_service.py  event_explorer_service.py  event_health_service.py  event_tracking_service.py  event_validator.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics_api.py  test_attribution_api.py  test_insights_api.py  (+2 more)
(+66 files in other folders)
