[project]
name = "bitmex-growth-engineering-simulation"
version = "0.1.0"
description = "Growth Engineering Analytics Platform — backend"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
